// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Paragraph Defaults smoke-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph IsPElement play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph VariantIngress smoke-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph VariantIngressWithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20 _paragraph_hasSpacingExtraLarge_1kzt5_26">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="_paragraph_1kzt5_1 _paragraph_ingress_1kzt5_20 _paragraph_hasSpacingExtraLarge_1kzt5_26">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithAttributes play-test 1`] = `
<div data-test-block="true">
  <p id="htmlId"
     class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  dummyClassname"
     lang="nb"
     data-testid="123ID"
  >
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithCanBeManuallyFocused play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17"
     tabindex="-1"
  >
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17"
     tabindex="-1"
  >
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithMarkup smoke-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17">
    <span>
      Tekstavsnitt som kan inneholde en lengre tekst. Husk å følge klarspråkprinsippene når en skriver tekster. I dette tilfellet skriver bare litt ekstra tekst for å få litt
      <strong>
        innhold
      </strong>
      , men
      <em>
        normalt
      </em>
      vil en ønske å skrive så konsentret som mulig. Mange brukere leser bare de første ordene i en tekst, eller hopper ganske enkelt over den. Dette er en
      <a href="https://www.yr.no/nb/v%C3%A6rvarsel/daglig-tabell/2-460499/Latvia/Bauskas%20Rajons/Codes%20pagasts/Code">
        lenke
      </a>
      for å sjekke været i
      <code>
        Code
      </code>
      som er en
      <small>
        small
      </small>
      landsby i et land med mange
      <mark>
        mark
      </mark>
      og et språk uten
      <b>
        b
      </b>
      eller
      <i>
        i
      </i>
      .
    </span>
  </p>
</div>
`;

exports[`Tester/Paragraph WithRef play-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17"
     id="dummyIdForwardedFromRef"
  >
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;

exports[`Tester/Paragraph WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
  <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17 _paragraph_hasSpacingLarge_1kzt5_23">
    Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
  </p>
</div>
`;
